2004-05-19    <mschimek@users.sf.net>

	* common/mmx.h: Compiler identification update.
	* video/motion.h: Troubles with gcc 3.4 and attribute regparm,
	  removed.

2004-04-23    <mschimek@users.sf.net>

	* configure.in: Added check and warning about older version
	  in other directory.

2004-04-21    <mschimek@users.sf.net>

	* common/device.c, common/device.h, common/structpr.pl,
	  common/Makefile.am (libcommon_la_SOURCES), devices/v4l25.c:
	  Added ioctl logging functions.

2004-04-08	<mschimek@users.sf.net>

	* devices/v4l25.c: Fixed incomplete v4l2_buffer
	  initialization.

2003-03-06	<mschimek@users.sf.net>

	* video/video.h, video/mpeg1.c, video/filter_mmx.s,
	  video/filter.c, devices/v4l2.c, devices/v4l25.c:
	  Added UYVY support.
	
2003-02-10	<mschimek@users.sf.net>

	* common/videodev25.h: Updated.

2003-01-15	<mschimek@users.sf.net>

	* common/videodev25.h, devices/v4l25.c, main.c: Added
	  v4l2 (Linux 2.5) interface, untested.
	* devices/alsa.c: "New API" corrections.

2003-01-02	<mschimek@users.sf.net>

	* macros/alsa.m4: Updated from ALSA 0.9.0rc6.
	* configure.in: New check for ALSA 0.9.x.
	* devices/Makefile.am: Added ALSA_CFLAGS|_LIBS.
	* devices/alsa.c: Rewrote ALSA 0.9 interface, works now, with
	  proper timestamping. Removed ALSA 0.5 routines.
	* global_data.c: ALSA device name fix.

2002-12-25	<mschimek@users.sf.net>

	* systems/vcd.c: Fixed status.bytes_out bug.

2002-12-17	<mschimek@users.sf.net>

	* b_mp1e.c: VCD output buffer too small.
	* common/mmx.h: gcc minor version++.

2002-11-11	<zhubr@users.sf.net>

	* devices/v4l.c: Avoid grab width padding (Allows to use 
	  horizontal decimating modes on ATI radeons in PAL/SECAM);
	* devices/v4l.c: Try yet harder to automatically correct grab 
	  size before giving up;
	* devices/v4l.c: Better use of > 2 kernel buffers (if present);
	* devices/v4l.c: Fixed minor typos (hopefully);
	* devices/v4l.c: Changed ffmpeg's author obsolete alias to his 
	  actual name in the header.
