@@ -17,7 +17,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: mmx.c,v 1.2 2001-08-22 01:28:08 mschimek Exp $ */
+/* $Id: mmx.c,v 1.3 2004-10-22 00:58:31 mschimek Exp $ */
 
 #include <stdlib.h>
 #include "log.h"
@@ -117,6 +117,7 @@ cpuid(cpuid_t *buf, unsigned int level)
 
 #define CYRIX_MMX	(1 << 23)
 #define CYRIX_MMXEXT	(1 << 24)
+#define CYRIX_SSE	(1 << 25)
 #define CYRIX_3DNOW	(1 << 31)
 
 #define FEATURE(bits)	((c.r.edx & (bits)) == (bits))
@@ -165,6 +166,11 @@ cpu_detection(void)
 			if (FEATURE(CYRIX_MMX))
 				return CPU_CYRIX_MII;
 		}
+	} else if (!strncmp(c.s + 4, "CentaurHauls", 12)) {
+		cpuid(&c, 1);
+
+		if (FEATURE(INTEL_MMX | INTEL_CMOV | INTEL_SSE))
+			return CPU_CYRIX_NEHEMIAH;
 	}
 
 	ASSERT("identify CPU", 0);
