@@ -1,8 +1,8 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_REVISION($Id: configure.in,v 1.27 2004-05-21 05:34:09 mschimek Exp $)
+AC_REVISION($Id: configure.in,v 1.28 2004-10-22 00:58:15 mschimek Exp $)
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(mp1e, 1.9.5cvs)
+AM_INIT_AUTOMAKE(mp1e, 1.9.5)
 AM_CONFIG_HEADER(config.h)
 AM_ACLOCAL_INCLUDE(macros)
 
