@@ -1,4 +1,4 @@
-.TH MP1E 1 "$Date: 2003-01-03 05:37:33 $" "mp1e manual" \" -*- nroff -*-
+.TH MP1E 1 "$Date: 2004-10-22 00:58:15 $" "mp1e manual" \" -*- nroff -*-
 .SH NAME
 mp1e \- realtime MPEG-1 audio/video encoder
 .SH SYNOPSIS
@@ -429,7 +429,7 @@ You can override automatic CPU detection with this option. At
 present the valid types are: pmmx, p2, p3, p4 for the respective
 Intel Pentium CPUs; k6-2, k7 for AMD devices (Athlons, Durons
 and Athlon 4 are k7); m2 and c3 refer to the Cyrix MII and
-Cyrix III CPUs.
+Cyrix III CPUs, n1 to Nehemia.
 .RE
 .TP
 .BI "\-F, \-\-filter " n
