@@ -17,7 +17,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: mpeg2.c,v 1.10 2002-12-14 00:43:44 mschimek Exp $ */
+/* $Id: mpeg2.c,v 1.11 2004-10-22 00:58:31 mschimek Exp $ */
 
 #include "site_def.h"
 
@@ -1242,6 +1242,7 @@ parameters_set(rte_codec *codec, rte_stream_parameters *rsp)
 
 	switch (cpu_type) {
 	case CPU_PENTIUM_III:
+	case CPU_CYRIX_NEHEMIAH:
 	case CPU_PENTIUM_4:
 	case CPU_ATHLON:
 		sse = 1;
@@ -1352,6 +1353,7 @@ parameters_set(rte_codec *codec, rte_stream_parameters *rsp)
 			break;
 #endif
 		case CPU_PENTIUM_III:
+		case CPU_CYRIX_NEHEMIAH:
 		case CPU_ATHLON:
 			search = sse_search;
 			break;
