@@ -1,3 +1,9 @@
+2004-01-19     <japie@deserver.nl>
+
+	* common/mmx.c, common/mmx.h, main.c, mp1e.1,
+          options.c, mpeg1.c, motion.c:
+          Added Via Nehemiah (C3) CPU.
+
 2004-05-19    <mschimek@users.sf.net>
 
 	* common/mmx.h: Compiler identification update.
